stickman game - img addition

--- a/stickman_game/index.html
+++ b/stickman_game/index.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <h1>stickman</h1>
-    <div class="gameBox">game
+    <div class="gameBox">
         <div class="stickman">
-            <div class="head"></div>
+            <h6>empty</h6>
+            <div class="word">Generated Word</div>
         </div>
     </div>
+    <button id="generateBtn">GENERATE WORD</button>
 </body>
 </html>
