Updated CSS and aligned content

--- a/stickman_game/index.html
+++ b/stickman_game/index.html
@@ -10,13 +10,22 @@
     <title>stickman</title>
 </head>
 <body>
-    <h1>stickman</h1>
-    <div class="gameBox">
+    <div class="grid-container">
+        <div class="grid-item grid-item-1">
+            <h1>stickman</h1>
+        </div>
         <div class="stickman">
-            <h6>empty</h6>
-            <div class="word">Generated Word</div>
+        <!-- <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/nhWT2m6s/stickman.png" alt="stickman"/></a> -->
+    </div>
+        <div class="grid-item grid-item-3">
+            <button id="generateBtn">GENERATE WORD</button>
+            <h1></h1>
+        <div class="words">
+            <h1></h1>
+        </div>
+            <input type="text" id="input" placeholder="Enter letter" name="Guess!">
+            <button id="submit">Submit</button>
         </div>
     </div>
-    <button id="generateBtn">GENERATE WORD</button>
 </body>
 </html>
