added some functionality

--- a/stickman_game/index.html
+++ b/stickman_game/index.html
@@ -19,12 +19,11 @@
     </div>
         <div class="grid-item grid-item-3">
             <button id="generateBtn">GENERATE WORD</button>
-            <h1></h1>
         <div class="words">
-            <h1></h1>
+            <h1 class="underscore"></h1>
         </div>
             <input type="text" id="input" placeholder="Enter letter" name="Guess!">
-            <button id="submit">Submit</button>
+            <button id="submitBtn">Submit</button>
         </div>
     </div>
 </body>
