Added win/loss logic. Game works

--- a/stickman_game/index.html
+++ b/stickman_game/index.html
@@ -15,8 +15,12 @@
             <h1>stickman</h1>
         </div>
         <div class="stickman">
-        <!-- <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/nhWT2m6s/stickman.png" alt="stickman"/></a> -->
-    </div>
+            <h2>Wins: <span id="wins"></span></h2>
+        <h2>Losses: <span id="losses"></span></h2>
+            <div id="divLetters">
+                <h3>Guessed Letters: <span id="guessedLetters"> </span></h3>
+            </div>
+        </div>
         <div class="grid-item grid-item-3">
             <button id="generateBtn">GENERATE WORD</button>
         <div class="words">
