1. Player can click board piece and piece will be selected and filled with that players color. 2. Added logic when player clicks game piece to update gameboard array with matching index of piece selected. 3. Added logic to prevent current player to change game piece of already selected game piece from previous player

--- a/connect4_game/index.html
+++ b/connect4_game/index.html
@@ -18,64 +18,64 @@
     <table>
         <tbody>
             <tr id="row1">
-                <td><div id="0" class="gamePiece"></div></td>
-                <td><div id="1" class="gamePiece"></div></td>
-                <td><div id="2" class="gamePiece"></div></td>
-                <td><div id="3" class="gamePiece"></div></td>
-                <td><div id="4" class="gamePiece"></div></td>
-                <td><div id="5" class="gamePiece"></div></td>
-                <td><div id="6" class="gamePiece"></div></td>           
+                <td><div id="brd0" class="gamePiece"></div></td>
+                <td><div id="brd1" class="gamePiece"></div></td>
+                <td><div id="brd2" class="gamePiece"></div></td>
+                <td><div id="brd3" class="gamePiece"></div></td>
+                <td><div id="brd4" class="gamePiece"></div></td>
+                <td><div id="brd5" class="gamePiece"></div></td>
+                <td><div id="brd6" class="gamePiece"></div></td>           
             </tr>
             <tr id="row2">
-                <td><div id="7" class="gamePiece"></div></td>
-                <td><div id="8" class="gamePiece"></div></td>
-                <td><div id="9" class="gamePiece"></div></td>
-                <td><div id="10" class="gamePiece"></div></td>
-                <td><div id="11" class="gamePiece"></div></td>
-                <td><div id="12" class="gamePiece"></div></td>
-                <td><div id="13" class="gamePiece"></div></td>
+                <td><div id="brd7" class="gamePiece"></div></td>
+                <td><div id="brd8" class="gamePiece"></div></td>
+                <td><div id="brd9" class="gamePiece"></div></td>
+                <td><div id="brd10" class="gamePiece"></div></td>
+                <td><div id="brd11" class="gamePiece"></div></td>
+                <td><div id="brd12" class="gamePiece"></div></td>
+                <td><div id="brd13" class="gamePiece"></div></td>
             </tr>
             <tr id="row3">
-                <td><div id="14" class="gamePiece"></div></td>
-                <td><div id="15" class="gamePiece"></div></td>
-                <td><div id="16" class="gamePiece"></div></td>
-                <td><div id="17" class="gamePiece"></div></td>
-                <td><div id="18" class="gamePiece"></div></td>
-                <td><div id="19" class="gamePiece"></div></td>
-                <td><div id="20" class="gamePiece"></div></td>
+                <td><div id="brd14" class="gamePiece"></div></td>
+                <td><div id="brd15" class="gamePiece"></div></td>
+                <td><div id="brd16" class="gamePiece"></div></td>
+                <td><div id="brd17" class="gamePiece"></div></td>
+                <td><div id="brd18" class="gamePiece"></div></td>
+                <td><div id="brd19" class="gamePiece"></div></td>
+                <td><div id="brd20" class="gamePiece"></div></td>
             </tr>
             <tr id="row4">
-                <td><div id="21" class="gamePiece"></div></td>
-                <td><div id="22" class="gamePiece"></div></td>
-                <td><div id="23" class="gamePiece"></div></td>
-                <td><div id="24" class="gamePiece"></div></td>
-                <td><div id="25" class="gamePiece"></div></td>
-                <td><div id="26" class="gamePiece"></div></td>
-                <td><div id="27" class="gamePiece"></div></td>
+                <td><div id="brd21" class="gamePiece"></div></td>
+                <td><div id="brd22" class="gamePiece"></div></td>
+                <td><div id="brd23" class="gamePiece"></div></td>
+                <td><div id="brd24" class="gamePiece"></div></td>
+                <td><div id="brd25" class="gamePiece"></div></td>
+                <td><div id="brd26" class="gamePiece"></div></td>
+                <td><div id="brd27" class="gamePiece"></div></td>
             </tr>
             <tr id="row5">
-                <td><div id="28" class="gamePiece"></div></td>
-                <td><div id="29" class="gamePiece"></div></td>
-                <td><div id="30" class="gamePiece"></div></td>
-                <td><div id="31" class="gamePiece"></div></td>
-                <td><div id="32" class="gamePiece"></div></td>
-                <td><div id="33" class="gamePiece"></div></td>
-                <td><div id="34" class="gamePiece"></div></td>
+                <td><div id="brd28" class="gamePiece"></div></td>
+                <td><div id="brd29" class="gamePiece"></div></td>
+                <td><div id="brd30" class="gamePiece"></div></td>
+                <td><div id="brd31" class="gamePiece"></div></td>
+                <td><div id="brd32" class="gamePiece"></div></td>
+                <td><div id="brd33" class="gamePiece"></div></td>
+                <td><div id="brd34" class="gamePiece"></div></td>
             </tr>
             <tr id="row6">
-                <td><div id="35" class="gamePiece"></div></td>
-                <td><div id="36" class="gamePiece"></div></td>
-                <td><div id="37" class="gamePiece"></div></td>
-                <td><div id="38" class="gamePiece"></div></td>
-                <td><div id="39" class="gamePiece"></div></td>
-                <td><div id="40" class="gamePiece"></div></td>
-                <td><div id="41" class="gamePiece"></div></td>
+                <td><div id="brd35" class="gamePiece"></div></td>
+                <td><div id="brd36" class="gamePiece"></div></td>
+                <td><div id="brd37" class="gamePiece"></div></td>
+                <td><div id="brd38" class="gamePiece"></div></td>
+                <td><div id="brd39" class="gamePiece"></div></td>
+                <td><div id="brd40" class="gamePiece"></div></td>
+                <td><div id="brd41" class="gamePiece"></div></td>
             </tr>
         </tbody>
     </table>
  </div>
- <div id="divBtn">
+ <!-- <div id="divBtn">
  <button id="startBtn">Start Game</button>
-</div>
+</div> -->
 </body>
 </html>
