--- a/connect4_game/index.html
+++ b/connect4_game/index.html
@@ -16,64 +16,75 @@
     <h1>CONNECT4</h1>
     <div>
     <table>
+        <colgroup>
+            <col span="1" class="column1">
+            <col span="1" class="column2">
+            <col span="1" class="column3">
+            <col span="1" class="column4">
+            <col span="1" class="column5">
+            <col span="1" class="column6">
+            <col span="1" class="column7">
+        </colgroup>
         <tbody>
+            <tr id="row0">
+                <td><div id="a0" class="gamePiece">0</div></td>
+                <td><div id="a1" class="gamePiece">1</div></td>
+                <td><div id="a2" class="gamePiece">2</div></td>
+                <td><div id="a3" class="gamePiece">3</div></td>
+                <td><div id="a4" class="gamePiece">4</div></td>
+                <td><div id="a5" class="gamePiece">5</div></td>
+                <td><div id="a6" class="gamePiece">6</div></td>           
+            </tr>
             <tr id="row1">
-                <td><div id="brd0" class="gamePiece"></div></td>
-                <td><div id="brd1" class="gamePiece"></div></td>
-                <td><div id="brd2" class="gamePiece"></div></td>
-                <td><div id="brd3" class="gamePiece"></div></td>
-                <td><div id="brd4" class="gamePiece"></div></td>
-                <td><div id="brd5" class="gamePiece"></div></td>
-                <td><div id="brd6" class="gamePiece"></div></td>           
+                <td><div id="b0" class="gamePiece">7</div></td>
+                <td><div id="b1" class="gamePiece">8</div></td>
+                <td><div id="b2" class="gamePiece">9</div></td>
+                <td><div id="b3" class="gamePiece">10</div></td>
+                <td><div id="b4" class="gamePiece">11</div></td>
+                <td><div id="b5" class="gamePiece">12</div></td>
+                <td><div id="b6" class="gamePiece">13</div></td>
             </tr>
             <tr id="row2">
-                <td><div id="brd7" class="gamePiece"></div></td>
-                <td><div id="brd8" class="gamePiece"></div></td>
-                <td><div id="brd9" class="gamePiece"></div></td>
-                <td><div id="brd10" class="gamePiece"></div></td>
-                <td><div id="brd11" class="gamePiece"></div></td>
-                <td><div id="brd12" class="gamePiece"></div></td>
-                <td><div id="brd13" class="gamePiece"></div></td>
+                <td><div id="c0" class="gamePiece">14</div></td>
+                <td><div id="c1" class="gamePiece">15</div></td>
+                <td><div id="c2" class="gamePiece">16</div></td>
+                <td><div id="c3" class="gamePiece">17</div></td>
+                <td><div id="c4" class="gamePiece">18</div></td>
+                <td><div id="c5" class="gamePiece">19</div></td>
+                <td><div id="c6" class="gamePiece">20</div></td>
             </tr>
             <tr id="row3">
-                <td><div id="brd14" class="gamePiece"></div></td>
-                <td><div id="brd15" class="gamePiece"></div></td>
-                <td><div id="brd16" class="gamePiece"></div></td>
-                <td><div id="brd17" class="gamePiece"></div></td>
-                <td><div id="brd18" class="gamePiece"></div></td>
-                <td><div id="brd19" class="gamePiece"></div></td>
-                <td><div id="brd20" class="gamePiece"></div></td>
+                <td><div id="d0" class="gamePiece">21</div></td>
+                <td><div id="d1" class="gamePiece">22</div></td>
+                <td><div id="d2" class="gamePiece">23</div></td>
+                <td><div id="d3" class="gamePiece">24</div></td>
+                <td><div id="d4" class="gamePiece">25</div></td>
+                <td><div id="d5" class="gamePiece">26</div></td>
+                <td><div id="d6" class="gamePiece">27</div></td>
             </tr>
             <tr id="row4">
-                <td><div id="brd21" class="gamePiece"></div></td>
-                <td><div id="brd22" class="gamePiece"></div></td>
-                <td><div id="brd23" class="gamePiece"></div></td>
-                <td><div id="brd24" class="gamePiece"></div></td>
-                <td><div id="brd25" class="gamePiece"></div></td>
-                <td><div id="brd26" class="gamePiece"></div></td>
-                <td><div id="brd27" class="gamePiece"></div></td>
+                <td><div id="e0" class="gamePiece">28</div></td>
+                <td><div id="e1" class="gamePiece">29</div></td>
+                <td><div id="e2" class="gamePiece">30</div></td>
+                <td><div id="e3" class="gamePiece">31</div></td>
+                <td><div id="e4" class="gamePiece">32</div></td>
+                <td><div id="e5" class="gamePiece">33</div></td>
+                <td><div id="e6" class="gamePiece">34</div></td>
             </tr>
             <tr id="row5">
-                <td><div id="brd28" class="gamePiece"></div></td>
-                <td><div id="brd29" class="gamePiece"></div></td>
-                <td><div id="brd30" class="gamePiece"></div></td>
-                <td><div id="brd31" class="gamePiece"></div></td>
-                <td><div id="brd32" class="gamePiece"></div></td>
-                <td><div id="brd33" class="gamePiece"></div></td>
-                <td><div id="brd34" class="gamePiece"></div></td>
-            </tr>
-            <tr id="row6">
-                <td><div id="brd35" class="gamePiece"></div></td>
-                <td><div id="brd36" class="gamePiece"></div></td>
-                <td><div id="brd37" class="gamePiece"></div></td>
-                <td><div id="brd38" class="gamePiece"></div></td>
-                <td><div id="brd39" class="gamePiece"></div></td>
-                <td><div id="brd40" class="gamePiece"></div></td>
-                <td><div id="brd41" class="gamePiece"></div></td>
+                <td><div id="f0" class="gamePiece">35</div></td>
+                <td><div id="f1" class="gamePiece">36</div></td>
+                <td><div id="f2" class="gamePiece">37</div></td>
+                <td><div id="f3" class="gamePiece">38</div></td>
+                <td><div id="f4" class="gamePiece">39</div></td>
+                <td><div id="f5" class="gamePiece">40</div></td>
+                <td><div id="f6" class="gamePiece">41</div></td>
             </tr>
         </tbody>
     </table>
  </div>
+ <h1 class="playerTurn">Player 1's Turn</h1>
+ <h3>Player 1: Blue<br>Player 2: Red</br></h3>
  <!-- <div id="divBtn">
  <button id="startBtn">Start Game</button>
 </div> -->
