removed practice from git

--- a/connect4_game/index.html
+++ b/connect4_game/index.html
@@ -85,8 +85,8 @@
  </div>
  <h1 class="playerTurn">Player 1's Turn</h1>
  <h3>Player 1: Blue<br>Player 2: Red</br></h3>
- <!-- <div id="divBtn">
+ <div id="divBtn">
  <button id="startBtn">Start Game</button>
-</div> -->
+</div>
 </body>
 </html>
